<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_gray"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="left"
            android:text="@string/btn_cancel_cn"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_form_alarm_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/new_alarm_cn"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/btn_done_cn"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_time_until_next_ring"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="16sp" />

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="0dp">

                <TextView
                    android:id="@+id/tv_ring_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="类型："
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_ring_rule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_ring_repeat_dates_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:text="响铃重复日期"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_ring_repeat_dates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="6dp"
                android:textColor="@color/colorPrimary"
                android:textSize="16sp" />

            <LinearLayout
                android:id="@+id/ll_days_of_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <ToggleButton
                    android:id="@+id/btn_sunday"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="1dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/weekday_button_selector"
                    android:text="@string/btn_sunday_cn"
                    android:textOff="@string/btn_sunday_cn"
                    android:textOn="@string/btn_sunday_cn" />

                <ToggleButton
                    android:id="@+id/btn_monday"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/weekday_button_selector"
                    android:text="@string/btn_monday_cn"
                    android:textOff="@string/btn_monday_cn"
                    android:textOn="@string/btn_monday_cn" />

                <ToggleButton
                    android:id="@+id/btn_tuesday"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/weekday_button_selector"
                    android:text="@string/btn_tuesday_cn"
                    android:textOff="@string/btn_tuesday_cn"
                    android:textOn="@string/btn_tuesday_cn" />

                <ToggleButton
                    android:id="@+id/btn_wednesday"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/weekday_button_selector"
                    android:text="@string/btn_wednesday_cn"
                    android:textOff="@string/btn_wednesday_cn"
                    android:textOn="@string/btn_wednesday_cn" />

                <ToggleButton
                    android:id="@+id/btn_thursday"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/weekday_button_selector"
                    android:text="@string/btn_thursday_cn"
                    android:textOff="@string/btn_thursday_cn"
                    android:textOn="@string/btn_thursday_cn" />

                <ToggleButton
                    android:id="@+id/btn_friday"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/weekday_button_selector"
                    android:text="@string/btn_friday_cn"
                    android:textOff="@string/btn_friday_cn"
                    android:textOn="@string/btn_friday_cn" />

                <ToggleButton
                    android:id="@+id/btn_saturday"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/weekday_button_selector"
                    android:text="@string/btn_saturday_cn"
                    android:textOff="@string/btn_saturday_cn"
                    android:textOn="@string/btn_saturday_cn" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_skip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp">

                <TextView
                    android:id="@+id/tv_skip_workingDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="工作日不响铃"
                    android:textSize="16sp" />

                <Switch xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/switch_skip_workingDay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitchStyle" />

                <TextView
                    android:id="@+id/tv_skip_holidays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:text="工作日才响铃"
                    android:textSize="16sp" />

                <Switch xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/switch_skip_holidays"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/CustomSwitchStyle" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="8dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/et_alarm_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="闹钟名称"
                android:paddingTop="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="0dp">

                <TextView
                    android:id="@+id/tv_ringtone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="铃声："
                    android:textSize="16sp" />

                <SeekBar
                    android:id="@+id/sb_ringtone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:layout_weight="98"
                    android:max="100"
                    android:padding="0dp"
                    android:progressBackgroundTint="@color/gray"
                    android:progressTint="@color/colorPrimary"
                    android:thumbTint="@color/colorPrimary" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/iv_ringtone_silent"
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="invisible">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="铃声："
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_weight="1"
                    android:src="@android:drawable/ic_lock_silent_mode" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="98"
                    android:text=""
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/tv_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:text="震动："
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_vibration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="20dp">

                <TextView
                    android:id="@+id/tv_ring"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="left"
                    android:text="响铃："
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/spinner_ring_times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="49" />

                <Spinner
                    android:id="@+id/spinner_ring_interval"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="49" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>